--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
+    "react-to-print": "^3.1.1",
     "sonner": "^2.0.6",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
