--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "embla-carousel-react": "^8.6.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "fs.promises": "^0.1.2",
     "gsap": "^3.13.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
     "mysql2": "^3.14.2",
-    "next": "15.4.1",
+    "next": "^15.5.3",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
@@ -55,12 +57,12 @@
     "sonner": "^2.0.6",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
-    "xlsx": "^0.18.5",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
