--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "tsx \"lib/seeds/seed.ts\""
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -72,7 +73,7 @@
     "eslint-config-next": "15.4.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "tsx": "^4.20.3",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
