--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "^15.5.3",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "num-words": "^1.2.3",
     "react": "19.1.0",
     "react-aria-components": "^1.11.0",
     "react-day-picker": "^9.8.1",
