--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-aria-components": "^1.11.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-to-print": "^3.1.1",
