✨ Make UI, forms, and transactions table responsive & improve code readability

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,13 @@
 # migrations
 /lib/db/migrations
 
+# vscode settings
+.vscode
+/.vscode/
+
+# others
+/public/uploads/**
+
 # next.js
 /.next/
 /out/
