--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
+    "react-masonry-css": "^1.0.16",
     "react-to-print": "^3.1.1",
     "recharts": "^2.15.4",
     "sonner": "^2.0.6",
