--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.0",
+    "downloadjs": "^1.4.7",
     "drizzle-orm": "^0.44.3",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
@@ -52,6 +53,7 @@
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "num-words": "^1.2.3",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-aria-components": "^1.11.0",
     "react-day-picker": "^9.8.1",
@@ -71,8 +73,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/downloadjs": "^1.4.6",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/papaparse": "^5.5.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
