--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
@@ -41,6 +41,8 @@
     "dotenv": "^17.2.0",
     "downloadjs": "^1.4.7",
     "drizzle-orm": "^0.44.3",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "fs.promises": "^0.1.2",
@@ -48,6 +50,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.24",
     "mysql2": "^3.14.2",
     "next": "^15.5.3",
     "next-auth": "^5.0.0-beta.29",
